# gimme-water-ML

./: .gitignore  README.md  analysis.R  core_use_case.puml  data.csv  get_images.sh  main.py  pyproject.toml
dataset/: plant_gotchi_train.parquet  plant_gotchi_validate.parquet
notebooks/: 00_preprocess.ipynb  01_analysis.ipynb  01_sarimax.ipynb  02_model.ipynb  02_simple_cnn_model.ipynb  03_with_sensor_model.ipynb  04_backbone.ipynb  05_virtual_dataset.ipynb  10_preprocess.ipynb  11_backbone.ipynb  20_sam2_annotator.ipynb  plant_gotchi_dataset.parquet  plant_gotchi_train.parquet  plant_gotchi_validate.parquet
notebooks/.ipynb_checkpoints/: 02_xgboost-checkpoint.ipynb  agg-checkpoint.csv
